TPLELAN-128 #comment Fixed for vertical buttons group alignment.

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -491,6 +491,16 @@ a {
 			box-shadow: none;
 		}
 	}
+	&.btn-group-vertical {
+		.btn {
+			&:last-child {
+				margin-left: 0px;
+			}
+			&:first-child {
+				margin-left: 0px;
+			}
+		}
+	}
 }
 
 .label, .badge {
